[project]
name = "dart-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "fastmcp>=3.1.1",
    "python-dotenv>=1.0.0",
]

# Pylance / Pyright / basedpyright: resolve packages from uv’s default .venv
[tool.pyright]
venvPath = "."
venv = ".venv"
# Explicit paths so analysis works even if the venv has no interpreter stub in Scripts/
extraPaths = [".venv/Lib/site-packages", ".venv/lib/python3.10/site-packages"]

[tool.basedpyright]
venvPath = "."
venv = ".venv"
extraPaths = [".venv/Lib/site-packages", ".venv/lib/python3.10/site-packages"]
